--- a/RPG-MVC/appsettings.json
+++ b/RPG-MVC/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=app.db;Cache=Shared"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
